--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,5 @@ or_fun_call = { level = "allow", priority = 1 }
 [dependencies]
 clap = { version = "4.5.16", features = ["derive", "color"] }
 color-eyre = "0.6.3"
+hyprland = { git = "https://github.com/hyprland-community/hyprland-rs", branch = "master" }
+serde_json = "1.0.127"
