feat(profile): Implement config file parsing

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,5 +25,7 @@ or_fun_call = { level = "allow", priority = 1 }
 bon = "2.1.0"
 clap = { version = "4.5.16", features = ["derive", "color"] }
 color-eyre = "0.6.3"
+dirs = "5.0.1"
 hyprland = { git = "https://github.com/hyprland-community/hyprland-rs", branch = "master" }
+serde = { version = "1.0.209", features = ["derive"] }
 serde_json = "1.0.127"
