--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,3 +29,4 @@ dirs = "5.0.1"
 hyprland = { git = "https://github.com/hyprland-community/hyprland-rs", branch = "master" }
 serde = { version = "1.0.209", features = ["derive"] }
 serde_json = "1.0.127"
+thiserror = "1.0.63"
